Add style to Password component

--- a/frontend/src/components/password/password.css
+++ b/frontend/src/components/password/password.css
@@ -20,3 +20,14 @@
 .password::placeholder {
     color: var(--placeHolderFontColor);
 }
+
+label {
+    position: relative;
+}
+
+.eye-button {
+    border: none;
+    background: none;
+    position: absolute;
+    right: 10px;
+}
