--- a/frontend/src/components/logIn-avatar/styles.css
+++ b/frontend/src/components/logIn-avatar/styles.css
@@ -2,3 +2,23 @@
   background-color: var(--blackGradient) !important;
   color: var(--mainFontColor) !important;
 }
+
+.css-1e6y48t-MuiButtonBase-root-MuiButton-root {
+  padding: 0 !important;
+  text-transform: none !important;
+  font-family: 'Poppins' !important;
+  font-weight: bold !important;
+  font-size: 1rem !important;
+}
+
+.edited-avatar {
+  display: flex;
+  align-items: center;
+  color: var(--mainFontColor);
+  margin-right: 2rem;
+}
+
+.edited-avatar > img {
+  width: 56px;
+  margin-left: 0.5rem;
+}
