--- a/frontend/src/components/product-item/productItem.css
+++ b/frontend/src/components/product-item/productItem.css
@@ -1,24 +1,61 @@
-ul {
-   display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    list-style: none;
-    padding: 0;
-    margin: 0;
-
+.product-item {
+  min-height: 530px;
+  width: 275px;
+  position: relative;
+  background: var(--blackGradient);
 }
 
-li {
-    width: 30%;
-    margin-bottom: 2rem;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    padding: 1rem;
-  }
-  
-li img {
-    width: 100%;
-    height: 300px;
-    object-fit: cover;
-    margin-bottom: 1rem;
+.image-product-container {
+  width: 100%;
+}
+
+.product-item > div > img {
+  width: 275px;
+  height: 400px;
+  object-fit: cover;
+}
+
+.category-product-item {
+  position: absolute;
+  top: 15px;
+  right: 20px;
+  background: rgba(64, 61, 57, 0.63);
+  padding: 0.4rem 0.8rem;
+  border-radius: 2.5rem;
+  color: var(--mainFontColor);
+  font-size: 0.8rem;
+}
+
+.product-item > h2 {
+  margin: 1.5rem 0 0.7rem 0;
+  padding-left: 1.5rem;
+  font-size: 1.3rem;
+  text-align: left;
+  color: var(--mainFontColor);
+  font-weight: 600;
+}
+
+.state-product-item {
+  text-align: right;
+  padding-right: 1.5rem;
+  margin-bottom: 0.7rem;
+}
+
+.footer-product-item {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 1.5rem;
+  align-items: baseline;
+  margin-bottom: 1rem;
+}
+
+.price-product-item {
+  font-size: 1.5rem;
+  color: var(--mainFontColor);
+  font-weight: bolder;
+}
+
+.city-product-item {
+  color: var(--subtitleColor);
+  font-size: 0.7rem;
 }
