--- a/frontend/src/components/secondary-button/secondaryButton.css
+++ b/frontend/src/components/secondary-button/secondaryButton.css
@@ -1,9 +1,9 @@
 .secondaryButton {
   padding: 0.8rem 3rem;
-color: var(--seconderyFontColor);
+color: var(--secondaryFontColor);
 font-family: 'Poppins';
 font-weight: bolder;
-border:1px solid var(--seconderyFontColor);
+border:1px solid var(--secondaryFontColor);
 background-color: transparent;
 border-radius: 2.5rem;
 }
