--- a/frontend/src/components/password/password.css
+++ b/frontend/src/components/password/password.css
@@ -1,12 +1,11 @@
 .password {
-    font-family: 'Poppins';
     border: none;
+    outline: none;
     background: var(--blackGradient);
     color: var(--mainFontColor);
     box-shadow: var(--boxShadow);
-    padding: 0.5rem;
-    border-radius: 0.8rem;
-    outline: none;
+    padding: 1rem;
+    border-radius: 2.5rem;
 }
 
 .password:hover {
@@ -14,7 +13,7 @@
 }
 
 .password:focus {
-    border: 1px solid skyblue;
+    color: var(--inputFocus);
 }
 
 .password::placeholder {
@@ -30,4 +29,5 @@ label {
     background: none;
     position: absolute;
     right: 10px;
+    top: 10px;
 }
