--- a/frontend/src/pages/home-page/styles/searchBarStyles.css
+++ b/frontend/src/pages/home-page/styles/searchBarStyles.css
@@ -42,8 +42,8 @@
 
 .search-bar-form > button {
   position: absolute;
-  right: -15px;
-  bottom: 4rem;
+  right: 0;
+  bottom: 5rem;
   width: 56px;
   height: 56px;
   border: none;
