--- a/frontend/src/pages/login-page/loginPageStyles.css
+++ b/frontend/src/pages/login-page/loginPageStyles.css
@@ -1,23 +1,24 @@
 main.login-main {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 3rem;
-    margin-bottom: 3rem;
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+    margin-bottom: 1rem;
 }
 
-main.login-main img {
-    max-width: 100%;
-    height: auto;
+main.login-main div.login-image-container img.login-image {
+    width: 30rem;
+    height: 25rem;
+    object-fit: cover;
 }
 
 main.login-main div.login-form-container {
     background: var(--blackGradient);
     box-shadow: var(--boxShadow);
     border-radius: 1rem;
-    padding: 3rem;
+    padding: 1.5rem 3rem;
     display: flex;
     flex-direction: column;
-    gap: 0.8rem;
+    gap: 1.5rem;
 }
 
 div.login-form-container form.login-form {
@@ -26,6 +27,16 @@ div.login-form-container form.login-form {
     justify-content: center;
     align-items: center;
     gap: 3rem;
+    margin-bottom: 1rem;
+    position: relative;
+}
+
+form.login-form input {
+    width: 20rem;
+}
+
+form.login-form > button {
+    margin-top: 1.5rem;
 }
 
 div.no-account {
@@ -42,5 +53,13 @@ div.no-account a {
 
 div.no-account a:hover {
     transform: scale(1.1);
+}
+
+p.login-error {
+    position: absolute;
+    font-size: 0.8rem;
+    color: var(--red);
+    text-align: left;
+    top: 10.3rem;
 }
 
