Add styles at notFoundPage

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -38,6 +38,12 @@
   url('./assets/fonts/PressStart2P-Regular.ttf');
 }
 
+#root {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
 body {
   margin: 0 4rem;
   font-family: 'Poppins', sans-serif;
