--- a/frontend/src/pages/login-page/loginPageStyles.css
+++ b/frontend/src/pages/login-page/loginPageStyles.css
@@ -1,9 +1,9 @@
-main.login-main {
+.login-section {
     display: flex;
     justify-content: center;
     gap: 2rem;
-    margin-bottom: 1rem;
 }
+
 
 main.login-main div.login-image-container img.login-image {
     width: 30rem;
@@ -18,7 +18,8 @@ main.login-main div.login-form-container {
     padding: 1.5rem 3rem;
     display: flex;
     flex-direction: column;
-    gap: 1.5rem;
+    justify-content: center;
+    gap: 0.8rem;
 }
 
 div.login-form-container form.login-form {
@@ -26,7 +27,7 @@ div.login-form-container form.login-form {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 3rem;
+    gap: 2rem;
     margin-bottom: 1rem;
     position: relative;
 }
@@ -36,7 +37,7 @@ form.login-form input {
 }
 
 form.login-form > button {
-    margin-top: 1.5rem;
+    margin-top: 1rem;
 }
 
 div.no-account {
@@ -61,16 +62,4 @@ p.login-error {
     color: var(--red);
     text-align: left;
     top: 10.3rem;
-}
-
-.Toastify__toast-container.Toastify__toast-container--bottom-right {
-    width: 460px;
-    font-family: 'Poppins';
-}
-
-.Toastify__toast.Toastify__toast-theme--dark.Toastify__toast--error.Toastify__toast--close-on-click {
-    background: rgba(64, 61, 57, 0.884);
-    color: var(--mainFontColor);
-    border-radius: 1rem;
-    box-shadow: var(--boxShadow);
 }
