--- a/frontend/src/components/footer/footer.css
+++ b/frontend/src/components/footer/footer.css
@@ -2,6 +2,7 @@ footer {
   margin: 1rem;
   display: flex;
   justify-content: center;
+  align-items: center;
   gap: 1rem;
   font-size: 0.9rem;
 }
