--- a/frontend/src/components/product-item/productItem.css
+++ b/frontend/src/components/product-item/productItem.css
@@ -1,6 +1,6 @@
 .product-item {
-  min-height: 530px;
-  width: 275px;
+  min-height: 300px;
+  width: 200px;
   position: relative;
   background: var(--blackGradient);
 }
@@ -10,26 +10,26 @@
 }
 
 .product-item > div > img {
-  width: 275px;
-  height: 400px;
+  width: 100%;
+  height: 200px;
   object-fit: cover;
 }
 
 .category-product-item {
   position: absolute;
-  top: 15px;
-  right: 20px;
+  top: 10px;
+  right: 15px;
   background: rgba(64, 61, 57, 0.63);
   padding: 0.4rem 0.8rem;
   border-radius: 2.5rem;
   color: var(--mainFontColor);
-  font-size: 0.8rem;
+  font-size: 0.6rem;
 }
 
 .product-item > h2 {
-  margin: 1.5rem 0 0.7rem 0;
-  padding-left: 1.5rem;
-  font-size: 1.3rem;
+  margin: 1rem 0 0.7rem 0;
+  padding-left: 1rem;
+  font-size: 1rem;
   text-align: left;
   color: var(--mainFontColor);
   font-weight: 600;
@@ -37,25 +37,25 @@
 
 .state-product-item {
   text-align: right;
-  padding-right: 1.5rem;
+  padding-right: 1rem;
+  font-size: 0.8rem;
   margin-bottom: 0.7rem;
 }
 
 .footer-product-item {
   display: flex;
   justify-content: space-between;
-  padding: 0 1.5rem;
+  padding: 0 1rem;
   align-items: baseline;
   margin-bottom: 1rem;
 }
 
 .price-product-item {
-  font-size: 1.5rem;
   color: var(--mainFontColor);
   font-weight: bolder;
 }
 
 .city-product-item {
   color: var(--subtitleColor);
-  font-size: 0.7rem;
+  font-size: 0.5rem;
 }
