--- a/frontend/src/pages/userProfile-page/UserProfilePage.css
+++ b/frontend/src/pages/userProfile-page/UserProfilePage.css
@@ -1,6 +1,107 @@
+.main-profile-page {
+  width: 95%;
+  display: grid;
+  grid-template-rows: 120px 1fr;
+  grid-template-columns: 169px 1fr;
+  justify-items: center;
+  align-self: center;
+}
+
 .profileMenu{
   background-image: var(--blackGradient);
-  display: inline-block;
-  border-radius: 40px;
-  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  border-radius: 1.5rem;
+  padding: 3rem 2rem;
+  gap: 3rem;
+  margin-left: 14.5rem;
+  grid-area: 2 / 1 / 3 / 2;
+  box-shadow: var(--boxShadow);
+  align-self: flex-start;
+}
+
+.user-info-profile {
+  width: 80%;
+  height: 6rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 3rem;
+  background: var(--blackGradient);
+  box-shadow: var(--boxShadow);
+  border-radius: 1.5rem;
+  position: relative;
+  grid-area: 1 / 1 / 2 / 3;
+}
+
+.user-info-profile > a > div {
+  display: flex;
+  align-items: flex-end;
+  gap: 1rem;
+}
+
+.user-info-profile > a > div > img {
+  width: 56px;
+  height: 56px;
+}
+
+.tel-location-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.tel-location-container > p, .tel-location-container > p > a {
+  font-size: 0.8rem;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  gap: 1rem;
+  color: var(--mainFontColor);
+}
+
+.tel-location-container > p > a:hover {
+  color: var(--secondaryFontColor);
+}
+
+.icon-profile {
+  width: 24px;
+  height: 24px;
+}
+
+.user-info-profile .MuiRating-root.MuiRating-sizeMedium.Mui-readOnly.MuiRating-readOnly.css-ryrseu-MuiRating-root {
+  position: absolute;
+  top: 25px;
+  left: 115px;
+}
+
+section.products-sale {
+  background: var(--blackGradient);
+  width: 73%;
+  min-height: 336px;
+  grid-area: 2 / 2 / 3 /3;
+  align-self: flex-start;
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: 2rem;
+  border-radius: 1.5rem;
+  box-shadow: var(--boxShadow);
+}
+
+#productsOnSale {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  justify-content: center;
+  gap: 1rem;
+  margin-top: 1rem;
+}
+
+#productsOnSale > li {
+  height: 316px;
+}
+
+#productsOnSale > li > a {
+  display: flex;
+  width: 200px;
 }
