--- a/frontend/src/pages/addProduct-page/addProduct.css
+++ b/frontend/src/pages/addProduct-page/addProduct.css
@@ -16,7 +16,7 @@
   font-weight: bolder;
   width: 100%;
   text-align: left;
-  margin: 1.5rem 0 0 3rem;
+  margin: 1.3rem 0 0 3rem;
 }
 
 .container-add-product-form {
@@ -48,8 +48,9 @@ option {
   color: var(--mainFontColor);
 }
 
-.container-add-product-form #category:hover {
-  color: var(--placeHolderFontColor);
+.container-add-product-form #category:hover,
+.container-add-product-form #state:hover  {
+  box-shadow: var(--inputHoverBoxShadow);
 }
 
 .image-input::file-selector-button {
@@ -69,7 +70,7 @@ option {
 input[name='price']::-webkit-outer-spin-button, 
 input[name='price']::-webkit-inner-spin-button, 
 input[name='price']::-webkit-outer-spin-button,
-input[name='pPrice']::-webkit-inner-spin-button {
+input[name='price']::-webkit-inner-spin-button {
   -webkit-appearance: none;
 }
 
@@ -86,7 +87,7 @@ input[name='pPrice']::-webkit-inner-spin-button {
 
 .textArea {
   width: 52rem;
-  height: 6rem;
+  height: 5rem;
 }
 
 .container-image-input {
@@ -109,7 +110,7 @@ input[name='pPrice']::-webkit-inner-spin-button {
 }
 
 .container-form-buttons {
-  margin: 0.5rem 0 1.3rem 0;
+  margin: 0 0 1.3rem 0;
   display: flex;
   gap: 1.3rem;
   width: 100%;
