--- a/frontend/src/pages/userProfile-page/UserProfilePage.css
+++ b/frontend/src/pages/userProfile-page/UserProfilePage.css
@@ -13,7 +13,7 @@
   flex-direction: column;
   border-radius: 1.5rem;
   padding: 3rem 2rem;
-  gap: 3rem;
+  gap: 2.5rem;
   margin-left: 14.5rem;
   grid-area: 2 / 1 / 3 / 2;
   box-shadow: var(--boxShadow);
@@ -26,6 +26,7 @@
 
 .profileMenu > a > p:hover {
   color: var(--secondaryFontColor);
+  cursor: pointer;
 }
 
 .user-info-profile {
@@ -90,7 +91,7 @@
 section.products-sale {
   background: var(--blackGradient);
   width: 73%;
-  height: 93%;
+  height: 90%;
   min-height: 336px;
   grid-area: 2 / 2 / 3 /3;
   align-self: flex-start;
@@ -117,4 +118,40 @@ section.products-sale {
 #productsOnSale > li > a {
   display: flex;
   width: 200px;
+}
+
+#userReviews {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+#userReviews > li {
+  width: 95%;
+  align-self: center;
+  margin-top: 1rem;
+}
+
+.userReviews-img-container {
+  width: 100%;
+}
+
+.userReviews-img-container > img {
+  object-fit: cover;
+  height: 125px;
+  width: 125px;
+  border-radius: 1.5rem;
+}
+
+.userReview-info-container {
+  display: flex;
+  height: 11rem;
+  background: var(--blackGradient);
+  box-shadow: var( --boxShadow);
+  border-radius: 2.5rem;
+}
+
+.userReview-info {
+  display: flex;
+  flex-direction: column;
 }
