--- a/frontend/src/pages/orderManagement-page/orderCard.css
+++ b/frontend/src/pages/orderManagement-page/orderCard.css
@@ -8,7 +8,7 @@
   width: 95%;
   height: 18rem;
 }
-.product-info {
+.product-info-order {
     display: flex;
     flex-direction: column;
     /* justify-content: space-between; */
