--- a/frontend/src/pages/userProfile-page/UserProfilePage.css
+++ b/frontend/src/pages/userProfile-page/UserProfilePage.css
@@ -5,6 +5,7 @@
   grid-template-columns: 169px 1fr;
   justify-items: center;
   align-self: center;
+  margin-top: -5px;
 }
 
 .profileMenu{
@@ -18,6 +19,7 @@
   grid-area: 2 / 1 / 3 / 2;
   box-shadow: var(--boxShadow);
   align-self: flex-start;
+  min-height: 20.5rem;
 }
 
 .profileMenu > a > p {
@@ -31,7 +33,7 @@
 
 .user-info-profile {
   width: 80%;
-  height: 6rem;
+  height: 5.8rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -155,3 +157,53 @@ section.products-sale {
   display: flex;
   flex-direction: column;
 }
+
+.profile-sections-wrapper {
+  box-shadow: var(--boxShadow);
+  background-image: var(--blackGradient);
+  border-radius: 40px;
+  box-shadow: 0px 4px 4px #00000040;
+  width: 75%;
+  margin: 1rem;
+  min-height: 20.5rem;
+  margin-top: 0;
+  }
+
+  .bio-frame {
+    box-shadow: var(--boxShadow);
+    align-items: center;
+    background-color: #403d3921;
+    border-radius: 40px;
+    display: inline-flex;
+    justify-content: center;
+    overflow: hidden;
+    position: relative;
+    width: 95%;
+    }
+    .text-wrapper-bio {
+    box-shadow: var(--boxShadow);
+    color: #ccc5b9bf;
+    font-family: "Poppins-ExtraLight", Helvetica;
+    font-size: 24px;
+    padding: 20px 20px;
+    font-weight: 200;
+    }
+
+      .verified-user-data {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 0.5rem;
+        margin-top: 1rem;
+        
+        
+      }
+
+     .profile-verified-user-data-wrapper {
+      display: flex;
+      flex-direction: row;
+      align-items: flex-start;
+      justify-content: flex-start;
+      gap: 1rem;
+     }
