--- a/frontend/src/pages/userProfile-page/UserProfilePage.css
+++ b/frontend/src/pages/userProfile-page/UserProfilePage.css
@@ -13,8 +13,8 @@
   display: flex;
   flex-direction: column;
   border-radius: 1.5rem;
-  padding: 3rem 2rem;
-  gap: 2.5rem;
+  padding: 2rem 1rem;
+  gap: 0.8rem;
   margin-left: 14.5rem;
   grid-area: 2 / 1 / 3 / 2;
   box-shadow: var(--boxShadow);
@@ -24,9 +24,24 @@
 
 .profileMenu > a > p {
   margin-top: 0.3rem;
+  min-height: 2.9rem;
+}
+.profileMenu > a {
+  box-shadow: var(--boxShadow);
+  border-radius: 20px;
+  padding-top: 0.5rem;
+  width: 8rem;
+  cursor: pointer;
+}
+.profileMenu > a:hover {
+  box-shadow: var(--inputHoverBoxShadow);
 }
 
 .profileMenu > a > p:hover {
+  color: var(--secondaryFontColor);
+  cursor: pointer;
+}
+.profileMenu > a > span:hover {
   color: var(--secondaryFontColor);
   cursor: pointer;
 }
@@ -122,40 +137,51 @@ section.products-sale {
   width: 200px;
 }
 
-#userReviews {
+
+.review-text-content {
+  text-align: left;
   display: flex;
   flex-direction: column;
-  width: 100%;
+  gap: 1rem;
 }
 
-#userReviews > li {
-  width: 95%;
-  align-self: center;
+.review-text-content > h2 {
+  font-family: "Poppins-ExtraBold", Helvetica;
+  font-size: 20px;
+  font-weight: 800;
+  line-height: normal;
+}
+
+.review-text-content > div > span {
+  font-family: "Poppins-Regular", Helvetica;
+  font-size: 11px;
+  font-weight: 400;
+  line-height: normal;
+  color: var(--subtitleColor);
+}
+.review-text-content > div {
   margin-top: 1rem;
 }
-
-.userReviews-img-container {
-  width: 100%;
-}
-
 .userReviews-img-container > img {
   object-fit: cover;
-  height: 125px;
-  width: 125px;
-  border-radius: 1.5rem;
+  height: 150px;
+  width: 150px;
+  border-radius: 15px;
+  margin: 1rem;
 }
 
 .userReview-info-container {
   display: flex;
-  height: 11rem;
   background: var(--blackGradient);
   box-shadow: var( --boxShadow);
-  border-radius: 2.5rem;
-}
-
-.userReview-info {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  background-color: var(--mainBackgroundColor);
+  border-radius: 40px;
+  box-shadow: 0px 4px 4px #00000040;
+  margin: 1.5rem;
+  width: 95%;
+  gap: 2rem;
 }
 
 .profile-sections-wrapper {
@@ -168,8 +194,7 @@ section.products-sale {
   min-height: 20.5rem;
   margin-top: 0;
   }
-
-  .bio-frame {
+.bio-frame {
     box-shadow: var(--boxShadow);
     align-items: center;
     background-color: #403d3921;
@@ -179,8 +204,9 @@ section.products-sale {
     overflow: hidden;
     position: relative;
     width: 95%;
-    }
-    .text-wrapper-bio {
+    text-align: left;
+}
+.text-wrapper-bio {
     box-shadow: var(--boxShadow);
     color: #ccc5b9bf;
     font-family: "Poppins-ExtraLight", Helvetica;
@@ -189,21 +215,48 @@ section.products-sale {
     font-weight: 200;
     }
 
-      .verified-user-data {
+.verified-user-data {
         display: flex;
         flex-direction: column;
-        align-items: center;
-        justify-content: center;
+        align-items: flex-start;
+        justify-content: flex-start;
         gap: 0.5rem;
         margin-top: 1rem;
+        width: 95%;
         
         
-      }
-
-     .profile-verified-user-data-wrapper {
+}
+.profile-verified-user-data-wrapper {
       display: flex;
+      width: 100%;
       flex-direction: row;
-      align-items: flex-start;
+      align-items: center;
       justify-content: flex-start;
-      gap: 1rem;
-     }
+      gap: 0.5rem;
+      margin-bottom: 0.8rem;
+      text-align: left;
+}
+
+.titles-moreInfo{
+  color: #fffcf2;
+font-family: "Poppins-ExtraBold", Helvetica;
+font-size: 28px;
+font-weight: 800;
+letter-spacing: 1.6px;
+text-align: left;
+margin-left: 2.4rem;
+margin-top: 0.25rem;
+}
+.title-info-verified {
+  margin-right: auto;
+  margin-left: none;
+  font-family: "Poppins-ExtraBold", Helvetica;
+font-size: 28px;
+font-weight: 800;
+letter-spacing: 1.6px;
+text-align: left;
+
+margin-top: 0.25rem;
+}
+
+
