Add css styles to AddReviewPage

--- a/frontend/src/pages/see-orders-page/productOrderInfo.css
+++ b/frontend/src/pages/see-orders-page/productOrderInfo.css
@@ -8,8 +8,8 @@
 }
 
 .see-your-orders-card img {
-  max-width: 150px;
-  height: auto; 
+  width: 10rem;
+  height: auto;
   border-radius: 10px;
 }
 
