--- a/frontend/src/pages/addReview-page/addReviewPage.css
+++ b/frontend/src/pages/addReview-page/addReviewPage.css
@@ -1,47 +1,155 @@
 
 .add-review-card-container {
   display: flex;
-  padding: 20px;
-  padding-top: 0;
-  margin-bottom: 20px;
-  min-height: 70vh;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  padding: 1.2rem 2rem;
   width: 70vw;
   background: var(--secondryBackgroundColor);
-  align-items: center;
   border-radius: 1.5rem;
   box-shadow: var(--boxShadow);
 }
 
-.add-review-card-left-content {
-  flex: 1;
-  margin-right: 20px;
+.add-review-card-container > h1 {
+  width: 100%;
+  font-family: "Poppins-ExtraBold", Helvetica;
+  font-size: 28px;
+  font-weight: 800;
+  line-height: normal;
+  text-align: left;
+}
+
+.add-review-complete-info {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  gap: 1rem;
+  justify-content: center;
+  align-items: center;
 }
 
 
-
 .add-review-card-left-content {
-  margin-bottom: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  width: 50%;
+}
+
+.add-review-seller-info {
   display: flex;
   flex-direction: column;
   position: relative;
+  margin-top: -3rem;
 }
 
-.add-review-card-left-content >  img {
-  width: 12rem;
-  height: auto; 
-  border-radius: 10px;
+.add-review-seller-info > a {
+  color: var(--mainFontColor);
 }
 
-
-
-.add-review-card-left-content > a > div {
+.add-review-seller-info  > a > div {
   display: flex;
   align-items: start;
   gap: 1rem;
 }
 
-.add-review-card-right-content  {
-  max-width: 50%;
+.add-review-seller-info > a > div > img {
+  width: 3.3rem;
+  height: 3.3rem;
 }
 
 
+.add-review-seller-info  .MuiRating-root.MuiRating-sizeMedium.Mui-readOnly.MuiRating-readOnly.css-ryrseu-MuiRating-root {
+  position: absolute;
+  top: 1.3rem;
+  left: 4.2rem;
+}
+
+.add-review-card-left-content > img {
+  width: 13rem;
+  height: 13rem; 
+  object-fit: cover;
+  border-radius: 1rem;
+}
+
+.add-review-card-right-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
+  gap: 0.9rem;
+  width: 50%;
+}
+
+.add-review-card-right-content > label > input {
+  width: 100%;
+}
+.add-review-card-right-content > label {
+  width: 100%;
+}
+
+
+.add-review-card-left-content > a > div {
+  display: flex;
+  gap: 1rem;
+}
+
+
+.add-review-area {
+  font-family: 'Poppins';
+  width: 100%;
+  display: block;
+  background: var(--blackGradient);
+  color: var(--mainFontColor);
+  box-shadow: var(--boxShadow);
+  border-radius: 1.5rem;
+  padding: 1rem;
+  border: none;
+  outline: none;
+  resize: none;
+  min-height: 10rem;
+}
+
+.add-review-area:hover {
+  box-shadow: var(--inputHoverBoxShadow);
+}
+
+.add-review-area:focus {
+  border: 1px solid skyblue;
+}
+
+.add-review-area::placeholder {
+  color: var(--placeHolderFontColor);
+}
+
+.add-review-area::-webkit-scrollbar {
+  width: 1rem;
+}
+
+.add-review-area::-webkit-scrollbar-track {
+  background-color: white;
+}
+
+.add-review-area::-webkit-scrollbar-thumb {
+  background: var(--orangeGradient); 
+  border-radius: 0.2rem;
+}
+
+.add-review-area::-webkit-scrollbar-thumb:hover {
+  background: linear-gradient(180deg, #cf430c 0%, #f18826 100%); 
+}
+
+.review-buttons-wrapper {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.review-buttons-wrapper > button {
+  width: 11rem;
+}
