--- a/frontend/src/pages/home-page/styles/homePageStyles.css
+++ b/frontend/src/pages/home-page/styles/homePageStyles.css
@@ -10,3 +10,18 @@
   left: 57px;
   letter-spacing: 3px;
 }
+
+@media (max-width: 768px) {
+  .products-section > h2 {
+    text-align: center;
+    position: relative;
+    top: 0;
+    left: 0;
+    margin-top: 1rem;
+  }
+  body {
+    width: 100%;
+    margin-inline: 1rem;
+
+  }
+}
