--- a/frontend/src/pages/home-page/styles/productListStyles.css
+++ b/frontend/src/pages/home-page/styles/productListStyles.css
@@ -14,3 +14,11 @@
 .product-list-home > li {
   width: 200px;
 }
+
+@media (max-width: 768px) {
+
+  .product-list-home > li {
+    width: 200px;
+  }
+  
+}
