--- a/frontend/src/pages/home-page/styles/sliderStyles.css
+++ b/frontend/src/pages/home-page/styles/sliderStyles.css
@@ -69,3 +69,9 @@
 .orange-container > a > button:hover {
   transform: scale(1.1);
 }
+
+@media (max-width: 1000px) {
+  .slider-section {
+    display: none;
+  }
+}
