--- a/frontend/src/pages/userProfile-page/UserProfilePage.css
+++ b/frontend/src/pages/userProfile-page/UserProfilePage.css
@@ -1,9 +1,8 @@
 .main-profile-page {
-  width: 95%;
+  width: 75%;
   display: grid;
   grid-template-rows: 120px 1fr;
   grid-template-columns: 169px 1fr;
-  justify-items: center;
   align-self: center;
   margin-top: -5px;
   flex-grow: 0;
@@ -16,7 +15,6 @@
   border-radius: 1.5rem;
   padding: 2rem 1rem;
   gap: 0.8rem;
-  margin-left: 14.5rem;
   grid-area: 2 / 1 / 3 / 2;
   box-shadow: var(--boxShadow);
   align-self: flex-start;
@@ -48,7 +46,6 @@
 }
 
 .user-info-profile {
-  width: 80%;
   height: 5.8rem;
   display: flex;
   align-items: center;
@@ -108,7 +105,6 @@
 
 section.products-sale {
   background: var(--blackGradient);
-  width: 73%;
   height: 90%;
   min-height: 336px;
   grid-area: 2 / 2 / 3 /3;
@@ -192,8 +188,7 @@ section.products-sale {
   background-image: var(--blackGradient);
   border-radius: 40px;
   box-shadow: 0px 4px 4px #00000040;
-  width: 75%;
-  margin: 1rem;
+  margin: 0 0 1rem 1rem;
   min-height: 20.5rem;
   margin-top: 0;
   }
